--- a/public/sass/userDashboard.scss
+++ b/public/sass/userDashboard.scss
@@ -175,10 +175,10 @@
             .off.show {
                 display: flex;
             }
-            .on {
+            .in {
                 display: flex;
             }
-            .on.show {
+            .in.show {
                 display: none;
             }
         }
