--- a/public/css/sign-in.css
+++ b/public/css/sign-in.css
@@ -78,6 +78,19 @@ a {
   position: relative;
 }
 
+.sign-in-overlay .signIn-wrapper .signInOut-close-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  background-image: url("../img/icons/close-white.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: 10;
+}
+
 .sign-in-overlay .signIn-wrapper .sign-image-wrap {
   position: relative;
   width: 110px;
